update web + docs

--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -2781,26 +2781,28 @@ Where we can view all available gists that we can apply to our projects with:
 Which as of this writing lists:
 
 ```
-   1. init                 by @ServiceStack  Empty .NET Core 2.2 ServiceStack App                                      to: .                            [project]
-   2. init-lts             by @ServiceStack  Empty .NET Core 2.1 LTS ServiceStack App                                  to: .                            [project]
-   3. init-corefx          by @ServiceStack  Empty ASP.NET Core 2.1 LTS on .NET Framework                              to: .                            [project]
-   4. init-sharp-app       by @ServiceStack  Empty ServiceStack Sharp App                                              to: .                            [project]
-   5. bootstrap-sharp      by @ServiceStack  Bootstrap + Sharp Pages Starter Template                                  to: $HOST                        [ui,sharp]
-   6. auth-memory          by @ServiceStack  AuthFeature configured with Memory Auth Repository and User Sessions      to: $HOST                        [auth]
-   7. auth-sqlserver       by @ServiceStack  AuthFeature configured with SQL Server Auth Repository and User Sessions  to: $HOST                        [auth]
-   8. auth-sqlite          by @ServiceStack  AuthFeature configured with SQLite Auth Repository and User Sessions      to: $HOST                        [auth]
-   9. auth-postgres        by @ServiceStack  AuthFeature configured with PostreSQL Auth Repository and User Sessions   to: $HOST                        [auth]
-  10. validation-contacts  by @ServiceStack  Contacts Validation Example                                               to: $HOST                        [example,sharp]
-  11. vue-lite-lib         by @ServiceStack  Update vue-lite projects libraries                                        to: $HOST                        [lib,vue]
-  12. react-lite-lib       by @ServiceStack  Update react-lite projects libraries                                      to: $HOST                        [lib,react]
-  13. nginx                by @ServiceStack  Nginx reverse proxy config for .NET Core Apps                             to: /etc/nginx/sites-available/  [config]
-  14. supervisor           by @ServiceStack  Supervisor config for managed execution of .NET Core Apps                 to: /etc/supervisor/conf.d/      [config]
-  15. docker               by @ServiceStack  Dockerfile example for .NET Core Web Apps                                 to: .                            [config]
+   1. init                 Empty .NET Core 2.2 ServiceStack App                                     to: .                            by @ServiceStack  [project]
+   2. init-lts             Empty .NET Core 2.1 LTS ServiceStack App                                 to: .                            by @ServiceStack  [project]
+   3. init-corefx          Empty ASP.NET Core 2.1 LTS on .NET Framework                             to: .                            by @ServiceStack  [project]
+   4. init-sharp-app       Empty ServiceStack Sharp App                                             to: .                            by @ServiceStack  [project]
+   5. bootstrap-sharp      Bootstrap + Sharp Pages Starter Template                                 to: $HOST                        by @ServiceStack  [ui,sharp]
+   6. sqlserver            Use OrmLite with SQL Server                                              to: $HOST                        by @ServiceStack  [db]
+   7. sqlite               Use OrmLite with SQLite                                                  to: $HOST                        by @ServiceStack  [db]
+   8. postgres             Use OrmLite with PostgreSQL                                              to: $HOST                        by @ServiceStack  [db]
+   9. mysql                Use OrmLite with MySql                                                   to: $HOST                        by @ServiceStack  [db]
+  10. auth-db              AuthFeature with OrmLite AuthRepository, CacheClient (requires ui,db)    to: $HOST                        by @ServiceStack  [auth]
+  11. auth-memory          AuthFeature with Memory Auth Repository and User Sessions (requires ui)  to: $HOST                        by @ServiceStack  [auth]
+  12. validation-contacts  Contacts Validation Example                                              to: $HOST                        by @ServiceStack  [example,sharp]
+  13. vue-lite-lib         Update vue-lite projects libraries                                       to: $HOST                        by @ServiceStack  [lib,vue]
+  14. react-lite-lib       Update react-lite projects libraries                                     to: $HOST                        by @ServiceStack  [lib,react]
+  15. nginx                Nginx reverse proxy config for .NET Core Apps                            to: /etc/nginx/sites-available/  by @ServiceStack  [config]
+  16. supervisor           Supervisor config for managed execution of .NET Core Apps                to: /etc/supervisor/conf.d/      by @ServiceStack  [config]
+  17. docker               Dockerfile example for .NET Core Web Apps                                to: .                            by @ServiceStack  [config]
 
  Usage:  web +<name>
          web +<name> <UseName>
 
-Search:  web + #<tag>      Available tags: auth, config, example, lib, project, react, sharp, ui, vue
+Search:  web + #<tag>      Available tags: auth, config, db, example, lib, project, react, sharp, ui, vue
 ```
 
 The way we populate this list is by extending the multi-purpose functionality of Markdown and using it as an "Executable Document" 
@@ -2825,15 +2827,15 @@ e.g. you can view available starting projects with:
 ```
 Results matching tag [project]:
 
-   1. init            by @ServiceStack  Empty .NET Core 2.2 ServiceStack App          to: .  [project]
-   2. init-lts        by @ServiceStack  Empty .NET Core 2.1 LTS ServiceStack App      to: .  [project]
-   3. init-corefx     by @ServiceStack  Empty ASP.NET Core 2.1 LTS on .NET Framework  to: .  [project]
-   4. init-sharp-app  by @ServiceStack  Empty ServiceStack Sharp App                  to: .  [project]
+   1. init            Empty .NET Core 2.2 ServiceStack App          to: .  by @ServiceStack  [project]
+   2. init-lts        Empty .NET Core 2.1 LTS ServiceStack App      to: .  by @ServiceStack  [project]
+   3. init-corefx     Empty ASP.NET Core 2.1 LTS on .NET Framework  to: .  by @ServiceStack  [project]
+   4. init-sharp-app  Empty ServiceStack Sharp App                  to: .  by @ServiceStack  [project]
 
  Usage:  web +<name>
          web +<name> <UseName>
 
-Search:  web + #<tag> Available tags: auth, config, example, lib, project, react, sharp, ui, vue
+Search:  web + #<tag> Available tags: auth, config, db, example, lib, project, react, sharp, ui, vue
 ```
 
 Which can be chained together to search for all `project` and `sharp` gists we can use for [Sharp Pages](https://sharpscript.net/docs/sharp-pages) projects:
@@ -2843,24 +2845,28 @@ Which can be chained together to search for all `project` and `sharp` gists we c
 ```
 Results matching tags [project,sharp]:
 
-   1. init                 by @ServiceStack  Empty .NET Core 2.2 ServiceStack App          to: .      [project]
-   2. init-lts             by @ServiceStack  Empty .NET Core 2.1 LTS ServiceStack App      to: .      [project]
-   3. init-corefx          by @ServiceStack  Empty ASP.NET Core 2.1 LTS on .NET Framework  to: .      [project]
-   4. init-sharp-app       by @ServiceStack  Empty ServiceStack Sharp App                  to: .      [project]
-   5. bootstrap-sharp      by @ServiceStack  Bootstrap + Sharp Pages Starter Template      to: $HOST  [ui,sharp]
-   6. validation-contacts  by @ServiceStack  Contacts Validation Example                   to: $HOST  [example,sharp]
+   1. init                 Empty .NET Core 2.2 ServiceStack App          to: .      by @ServiceStack  [project]
+   2. init-lts             Empty .NET Core 2.1 LTS ServiceStack App      to: .      by @ServiceStack  [project]
+   3. init-corefx          Empty ASP.NET Core 2.1 LTS on .NET Framework  to: .      by @ServiceStack  [project]
+   4. init-sharp-app       Empty ServiceStack Sharp App                  to: .      by @ServiceStack  [project]
+   5. bootstrap-sharp      Bootstrap + Sharp Pages Starter Template      to: $HOST  by @ServiceStack  [ui,sharp]
+   6. validation-contacts  Contacts Validation Example                   to: $HOST  by @ServiceStack  [example,sharp]
 
  Usage:  web +<name>
          web +<name> <UseName>
 
-Search:  web + #<tag>      Available tags: auth, config, example, lib, project, react, sharp, ui, vue
+Search:  web + #<tag>      Available tags: auth, config, db, example, lib, project, react, sharp, ui, vue
 ```
 
 ### Creating customized projects
 
-From this list we can see that we can create an **Empty .NET Core 2.2 ServiceStack App** with:
+From this list we can see that we can create an **Empty .NET Core 2.2 ServiceStack App** by starting in a new App Folder:
 
-    $ web +init ProjectName
+    $ md ProjectName && cd ProjectName
+
+Then applying the `init` labelled gist which will be saved to the `'.'` current directory:
+
+    $ web +init
 
 ```
 Write files from 'init' https://gist.github.com/gistlyn/58030e271595520d87873c5df5e4c2eb to:
@@ -2880,29 +2886,37 @@ Where its output will let you inspect and verify the gist it's writing and all t
 
 To instead start with the **latest .NET Core LTS release**, run:
 
-    $ web +init-lts ProjectName
+    $ web +init-lts
 
-After we've created our empty .NET Core project we can give it a **Bootstrap Sharp Pages UI** with:
+After we've created our empty .NET Core project we can configure it to use **PostgreSQL** with:
 
-    $ web +bootstrap-sharp ProjectName
+    $ web +postgres
 
-What's even better is that gists can be chained, so we can create a **.NET Core 2.2 Bootstrap Sharp Pages App** with:
+Or we can give it a **Bootstrap Sharp Pages UI** with:
 
-    $ web +init+bootstrap-sharp ProjectName
+    $ web +bootstrap-sharp
+
+What's even better is that gists can be chained, so we can create a **.NET Core 2.2 Bootstrap Sharp Pages App using PostgreSQL** with:
+
+    $ web +init+bootstrap-sharp+postgres
 
 A **Bootstrap Sharp Pages App** that includes a complete **Contacts Validation example** with:
 
-    $ web +init+bootstrap-sharp+validation-contacts ProjectName
+    $ web +init+bootstrap-sharp+validation-contacts
 
 The same as above, but its Auth replaced to persist in a **PostgreSQL** backend:
 
-    $ web +init+bootstrap-sharp+validation-contacts+auth-postgres ProjectName
+    $ web +init+bootstrap-sharp+validation-contacts+postgres+auth-db
+
+If we decided later we wanted to switch to use **SQL Server** instead we can just layer it over the top of our existing App:
+
+    $ web +sqlserver
 
 This isn't just limited to gist projects, you can also apply gists when **creating new projects**:
 
-    $ web new sharp+auth-postgres
+    $ web new sharp+postgres+auth-db
 
-Which will create a [sharp](https://github.com/NetCoreTemplates/sharp) project configured to use PostgreSQL Auth.
+Which will create a [sharp](https://github.com/NetCoreTemplates/sharp) project configured to use **PostgreSQL Auth**.
 
 This works despite the `sharp` project being a [multi-project solution](/physical-project-structure) 
 thanks to the `to: $HOST` modifier which says to **apply the gists files** to the `HOST` project.
