--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -42,8 +42,8 @@ Instead of WCF's dependence on complicated configuration and tooling ServiceStac
 in addition to adopting a simpler, cleaner more robust approach to develop Services on the outside, also encouraged a cleaner development model 
 on the inside where DTOs only dependency were to **ServiceStack.Interfaces** - a dependency and implementation-free Assembly containing abstractions of
 all ServiceStack providers. This allowed the decoupling of your Host project containing all your App's configuration and concrete dependencies with your Services
-logic which would only bind to substitutable and testable interfaces so your AppHost could freely switch to use different concrete Caching, 
-Configuration or Logging providers without impacting your Services implementation which is decoupled from your ServiceModel DTOs, which itself has no concrete dependencies.
+logic which would only bind to substitutable and testable interfaces so your AppHost could freely switch to use different concrete [Caching](/caching), 
+[Configuration](/appsettings) or [Logging providers](/logging) without impacting your Services implementation which is decoupled from your ServiceModel DTOs, which itself has no concrete dependencies.
 
 This same time-tested blue-print giving ServiceStack Projects a structured base to build on continues to be our recommended 
 [Physical Project Structure](/physical-project-structure) that's adopted from most of our [project templates](/templates-overview).
@@ -58,7 +58,7 @@ available in a myriad of [serialization formats](/formats), accessible from a [n
 I'd like to take this milestone to thank our thousands of Customers we've had the pleasure to serve and see our Software used which has amassed 
 more than **27,000,000+ total downloads** on NuGet and to see the uptick in adoption of some of our unique features like 
 [Add ServiceStack Reference](/add-servicestack-reference) which has been used more than **88,000 times** 
-to add and update native Typed DTOs amongst its [8 supported languages](/add-servicestack-reference#supported-languages).
+to generate native Typed DTOs amongst its [8 supported languages](/add-servicestack-reference#supported-languages).
 
 It's rewarding to see value being created with our software and the small part we've played in its success, we're especially grateful to continue serving 
 our long term Customers who've supported us since ServiceStack became a permanent full-time effort in 2013 and I look forward to continue working on enhancing the 
@@ -243,7 +243,7 @@ supports running on [multiple platforms](/why-servicestack#multiple-hosting-opti
 source-code compatibility when and if you choose to **move to .NET Core** in future.
 
 So whilst Microsoft is stopping new development of ASP.NET Core on .NET Framework, we're not, our supported packages have standardized to
-multi-target both **.NET v4.5+** and **.NET Standard 2.0** which is supported natively on **ASP.NET Core 2.1 LTS**.
+multi-target both **.NET v4.5+** and **.NET Standard 2.0** which is supported natively on **ASP.NET Core 2.1**.
 
 ### ServiceStack's multi-targeted Packages
 
