--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -4416,8 +4416,8 @@ var result = db.Single<TableJson>("table_json->'SubType'->>'Name' = 'JSON'");
 
 ### New KeyValuePair<K,V> top-level APIs
 
-This API is similar to `db.Dictionary<K,V>` where it uses the **first 2 columns** create a Dictionary using the first column for the key and
-the 2nd column for the value but is more appropriate when you need to preserve ordering:
+The new `db.KeyValuePair<K,V>` API is similar to `db.Dictionary<K,V>` where it uses the **first 2 columns** for its Key/Value Pairs to 
+create a Dictionary but is more appropriate when the results can contain duplicate Keys or when ordering needs to be preserved:
 
 ```csharp
 var q = db.From<StatsLog>()
@@ -4427,6 +4427,8 @@ var q = db.From<StatsLog>()
 
 var results = db.KeyValuePairs<string, int>(q);
 ```
+
+> `*Async` variants also available
 
 ### SELECT Constant Expressions
 
