--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1170,8 +1170,9 @@ glimpse of this with [_bundle.ss script above](#pre-compiled-minified-production
 
     $ web run wwwroot/_bundle.ss
 
-`#Script` scripts are **run in the same context** and have access to the same functionality and features as a [Sharp App](https://sharpscript.net/docs/sharp-apps) 
-including extensibility va [custom plugins](https://sharpscript.net/docs/sharp-apps#plugins). They can run **stand-alone** independent of an 
+**[Sharp Scripts](https://sharpscript.net/docs/sharp-scripts)** are **run in the same context** and have access to the same functionality and features as a 
+[Sharp App](https://sharpscript.net/docs/sharp-apps) including extensibility va [custom plugins](https://sharpscript.net/docs/sharp-apps#plugins). 
+They can run **stand-alone** independent of an 
 [app.settings](https://sharpscript.net/docs/sharp-apps#ideal-for-web-designers-and-content-authors) config file, instead the app settings configuration
 can be added in its page arguments to enable or configure any features.
 
@@ -1446,6 +1447,8 @@ What's even nicer than the fast feedback of running adhoc scripts? Is the instan
 To watch a script just replace `run` with `watch`:
 
     $ web watch script-aws.ss -find *.png
+
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/sharpscript/watch-aws-azure.gif)](https://sharpscript.net/docs/sharp-scripts)
 
 The ability to run stand-alone adhoc scripts in an extensible dynamic scripting language feels like you're 
 using a "developer enhanced" SQL Studio, where you can combine queries from multiple data sources, [manipulate them with LINQ](https://sharpscript.net/linq/restriction-operators) 
