--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1514,6 +1514,10 @@ CSS:
 body{background-color:#fff}
 ```
 
+### Live Session
+
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/sharpscript/livepad.gif)](https://sharpscript.net/docs/sharp-scripts)
+
 ### Usage in .NET
 
 To evaluate `#Script` in .NET you'll first create the `ScriptContext` containing all functionality and features your Scripts have access to:
