--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -2511,7 +2511,22 @@ equally well in reverse where the page for a route will be exactly where you thi
 
 #### Designing Clean URLs
 
-Some great references on designing RESTful Pretty URLs are the [Clean URL examples in Wikipedia](https://en.wikipedia.org/wiki/Clean_URL#Structure).
+Some great references on designing RESTful Pretty URLs are the [Clean URL examples in Wikipedia](https://en.wikipedia.org/wiki/Clean_URL#Structure):
+
+| Uncleaned URL                                                   |  Clean URL                                |
+|-----------------------------------------------------------------|-------------------------------------------|
+| http://example.com/index.php?page=name                          | http://example.com/name                   |
+| http://example.com/about.html                                   | http://example.com/about                  |
+| http://example.com/index.php?page=consulting/marketing          | http://example.com/consulting/marketing   |
+| http://example.com/products?category=12&pid=25                  | http://example.com/products/12/25         |
+| http://example.com/cgi-bin/feed.cgi?feed=news&frm=rss           | http://example.com/news.rss               |
+| http://example.com/services/index.jsp?category=legal&id=patents | http://example.com/services/legal/patents |
+| http://example.com/kb/index.php?cat=8&id=41                     | http://example.com/kb/8/41                |
+| http://example.com/index.php?mod=profiles&id=193                | http://example.com/profiles/193           |
+| http://en.wikipedia.org/w/index.php?title=Clean_URL             | http://en.wikipedia.org/wiki/Clean_URL    |
+
+#### Get Inspired by GitHub
+
 For some real-world inspiration look to [github.com](https://github.com) who are masters at it. You can tell a lot of thought went into 
 meticulously choosing the ideal routes they want for all of their sites functionality. This has added tremendous value to GitHub's usability 
 whose intuitive routes have made deep navigation possible where you can jump directly to the page you want without always having to navigate 
@@ -3017,7 +3032,7 @@ When enabled it should let you debug into the ServiceStack framework implementat
 ### All ServiceStack GitHub projects now use CI NuGet feed
 
 In addition to switching to MSBuild generated packages all projects have also switched to using CI NuGet package feeds for external dependencies instead 
-instead of copying .dll's in `/lib` folders. As a consequence you'll no longer have to build external ServiceStack GitHub projects or use GitHub published releases, 
+of copying .dll's in `/lib` folders. As a consequence you'll no longer have to build external ServiceStack GitHub projects or use GitHub published releases, 
 as now the **master** repo of all GitHub projects can be built from a clean checkout at anytime.
 
 The pre-release packages are still published using the **same version number** so if you get a build error from having a cached stale package
