--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -2513,17 +2513,10 @@ equally well in reverse where the page for a route will be exactly where you thi
 
 Some great references on designing RESTful Pretty URLs are the [Clean URL examples in Wikipedia](https://en.wikipedia.org/wiki/Clean_URL#Structure):
 
-| Uncleaned URL                                                   |  Clean URL                                |
-|-----------------------------------------------------------------|-------------------------------------------|
-| http://example.com/index.php?page=name                          | http://example.com/name                   |
-| http://example.com/about.html                                   | http://example.com/about                  |
-| http://example.com/index.php?page=consulting/marketing          | http://example.com/consulting/marketing   |
-| http://example.com/products?category=12&pid=25                  | http://example.com/products/12/25         |
-| http://example.com/cgi-bin/feed.cgi?feed=news&frm=rss           | http://example.com/news.rss               |
-| http://example.com/services/index.jsp?category=legal&id=patents | http://example.com/services/legal/patents |
-| http://example.com/kb/index.php?cat=8&id=41                     | http://example.com/kb/8/41                |
-| http://example.com/index.php?mod=profiles&id=193                | http://example.com/profiles/193           |
-| http://en.wikipedia.org/w/index.php?title=Clean_URL             | http://en.wikipedia.org/wiki/Clean_URL    |
+<div class='markdown-body'>
+{% capture cleanUrls %}{% include clean-urls.md %}{% endcapture %}
+{{ cleanUrls | markdownify }}
+</div>
 
 #### Get Inspired by GitHub
 
