--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -302,7 +302,7 @@ high quality code bases and build highly functional and capable libraries withou
 ## Introducing new "lite" npm-free project templates
 
 The question we keep asking ourselves is how can ServiceStack make modern Web Development simpler, the natural choice was to
-provide pre-configured [Webpack-powered SPA Project Templates](/templates-single-page-apps) - brining the recommended SPA
+provide pre-configured [Webpack-powered SPA Project Templates](/templates-single-page-apps) - bringing the recommended SPA
 development model for all popular SPA frameworks to .NET, which we've been doing successfully and seamlessly integrated with ServiceStack for years. 
 
 However the next leap in simplicity wont be coming from adding additional tooling to manage the complexity, it will be from 
@@ -310,12 +310,12 @@ removing the underlying complexity entirely. Fortunately one of the targets all 
 UMD packages so they can be referenced as a single include in online IDE's like [codepen.io](https://codepen.io) but also 
 for simple Web Apps that want to gradually adopt these frameworks but want to avoid the complexity of maintaining an npm build system.
 
-These UMD packages lets us return back to the simple era if web development where we can go back to referencing libraries using simple 
+These UMD packages lets us return back to the simple era of web development where we can go back to referencing libraries using simple 
 script includes - which is the strategy embraced in ServiceStack's new "lite" project templates. 
 
 ### Light on Complexity, Big on Features
 
-Surprisingly whilst we're able to rid our selves of the complexity of maintaining an npm-based build system, we're still able to 
+Surprisingly whilst we're able to rid ourselves of the complexity of maintaining an npm-based build system, we're still able to 
 enjoy many of the features that make SPA development with Webpack a joy:
 
  - Integrated hot-reloading
@@ -378,7 +378,7 @@ Which monitors any changes to any `.ts` files and incrementally compiles their `
 [static files](/templates-single-page-apps#optimal-dev-workflow-with-hot-reloading) hot-reloading detects 
 changes to any `.js` files and automatically reloads the page.
 
-The for Server C# development, start your .NET Web App in a new Terminal window with:
+For Server C# development, start your .NET Web App in a new Terminal window with:
 
     $ dotnet watch run
 
