--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -122,7 +122,7 @@ feel free to jump directly to the features you're interested in:
  - [World Validation](#world-validation)
     - [Benefits of Services](#benefits-of-services)
     - [API First Development Model](#api-first-development-model)
-    - [Validation of all the things](#validation-of-all-the-things)
+    - [Validation from all the things](#validation-of-all-the-things)
     - [Server Rendered HTML UIs](#server-rendered-html-uis)
     - [Client HTML UIs](#client-html-uis)
     - [Shared Error Handling Concepts](#shared-error-handling-concepts)
@@ -1819,7 +1819,7 @@ clean **Request DTOs** received as Inputs that typically return clean **Response
 providing a View of your Services or serving as a bundled UI that works on top of your existing Services, in all cases calling the same 
 well tested and defined Services that all other clients use.
 
-### Validation of all the things
+### Validation from all the things
 
 To better demonstrate the benefits of this approach and to show there's no loss of flexibility, we've created the new 
 [Validation](https://github.com/NetCoreApps/Validation) .NET Core App which uses the same pure unopinionated ServiceStack Services to support 
