--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -3723,6 +3723,63 @@ public class IdentityService : Service
 
 ## ServiceStack
 
+### AppSettings .NET Core Configuration conventions
+
+To improve integration with .NET Core's Configuration API, using the `:` in your AppSettings Key can be used to navigate nested configuration, e.g:
+
+```json
+{
+    "A": { 
+        "B": { 
+            "C": "value" 
+        } 
+    }
+}
+```
+
+You can retrieve the nested configuration above with:
+
+```csharp
+var value = AppSettings.GetString("A:B:C");
+```
+
+See [NetCoreAppSettingsTests.cs](https://github.com/ServiceStack/ServiceStack/blob/master/tests/ServiceStack.Common.Tests/Configuration/NetCoreAppSettingsTests.cs)
+for more examples.
+
+### Update `servicestack:license` configuration
+
+This is a **breaking change** if you were relying on Auto License Key registration in `appsettings.json` with:
+
+```json
+{
+    "servicestack:license": "{LICENSE_KEY}"
+}
+```
+
+Which now needs to be changed to:
+
+```json
+{
+    "servicestack" : {
+        "license": "{LICENSE_KEY}"
+    }
+}
+```
+
+Alternatively you can use your own key without `:` and register your license key manually:
+
+```json
+{
+    "servicestack_license": "{LICENSE_KEY}"
+}
+```
+
+Then you can register the key as a normal string app setting, e.g:
+
+```csharp
+Licensing.RegisterLicense(AppSettings.GetString("servicestack_license"));
+```
+
 ### New Auth Providers
 
 In coordination with winding down our support for [ServiceStack.Authentication.OAuth2](https://www.nuget.org/packages/ServiceStack.Authentication.OAuth2) and
