Replace .Fmt() with C# strings

--- a/docs/_releases/v4.0.11.md
+++ b/docs/_releases/v4.0.11.md
@@ -248,7 +248,7 @@ Or to gain complete control of each queue name used, provide a custom QueueName 
 
 ```csharp
 QueueNames.ResolveQueueNameFn = (typeName, suffix) =>
-    "SITE.{0}{1}".Fmt(typeName.ToLower(), suffix.ToUpper());
+    $"SITE.{typeName.ToLower()}{suffix.ToUpper()}";
 
 QueueNames<Hello>.In  //= SITE.hello.INQ
 ```
