--- a/docs/_releases/v4.0.18.md
+++ b/docs/_releases/v4.0.18.md
@@ -204,9 +204,7 @@ Aliases can also be referenced when creating custom SQL using the `SqlTable()` a
 
 ```csharp
 var result = db.SqlList<MyTable>(
-    "SELECT * FROM {0} WHERE {1} = {2}".Fmt(
-        "MyTable".SqlTable(),
-        "MyField".SqlColumn(), "foo".SqlValue()));
+    "SELECT * FROM {0} WHERE {1} = {2}".Fmt("MyTable".SqlTable(), "MyField".SqlColumn(), "foo".SqlValue()));
 ```
 
 #### New Exists APIs
