--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -2358,68 +2358,66 @@ This also provides a good opportunity to showcase `#Script` other exciting featu
 
 Here are [Mozilla's Array examples](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array) in `#Script`:
 
-```js
-{% raw %}```code{% endraw %}
-`Create an Array`
-['Apple', 'Banana'] | to => fruits
-fruits.Count
+    ```code
+    `Create an Array`
+    ['Apple', 'Banana'] | to => fruits
+    fruits.Count
 
-`\nAccess (index into) an Array Item`
-fruits[0] | to => first
-first
+    `\nAccess (index into) an Array Item`
+    fruits[0] | to => first
+    first
 
-`\nLoop over an Array`
-#each item in fruits
-    `${item}, ${index}`
-/each
+    `\nLoop over an Array`
+    #each item in fruits
+        `${item}, ${index}`
+    /each
 
-[] | to => sb
-fruits.forEach((item,index,array) => sb.push(`${item}, ${index}`))
-sb.join(`\n`)
+    [] | to => sb
+    fruits.forEach((item,index,array) => sb.push(`${item}, ${index}`))
+    sb.join(`\n`)
 
-`\nAdd to the end of an Array`
+    `\nAdd to the end of an Array`
 
-fruits.push('Orange') | to => newLength
-newLength
+    fruits.push('Orange') | to => newLength
+    newLength
 
-`\nRemove from the end of an Array`
-fruits.pop() | to => last
-last
+    `\nRemove from the end of an Array`
+    fruits.pop() | to => last
+    last
 
-`\nRemove from the front of an Array`
-fruits.shift() | to => first
-first
+    `\nRemove from the front of an Array`
+    fruits.shift() | to => first
+    first
 
-`\nAdd to the front of an Array`
-fruits.unshift('Strawberry') | to => newLength
-newLength
+    `\nAdd to the front of an Array`
+    fruits.unshift('Strawberry') | to => newLength
+    newLength
 
-`\nFind the index of an item in the Array`
-fruits.push('Mango') | end
+    `\nFind the index of an item in the Array`
+    fruits.push('Mango') | end
 
-fruits.indexOf('Banana') | to => pos
-pos
+    fruits.indexOf('Banana') | to => pos
+    pos
 
-`\nRemove an item by index position`
-fruits.splice(pos, 1) | to => removedItem
-removedItem | join
-fruits | join
+    `\nRemove an item by index position`
+    fruits.splice(pos, 1) | to => removedItem
+    removedItem | join
+    fruits | join
 
-`\nRemove items from an index position`
-['Cabbage', 'Turnip', 'Radish', 'Carrot'] | to => vegetables 
-vegetables | join
+    `\nRemove items from an index position`
+    ['Cabbage', 'Turnip', 'Radish', 'Carrot'] | to => vegetables 
+    vegetables | join
 
-1 | to => pos
-2 | to => n
+    1 | to => pos
+    2 | to => n
 
-vegetables.splice(pos, n) | to => removedItems 
-vegetables | join
-removedItems | join
+    vegetables.splice(pos, n) | to => removedItems 
+    vegetables | join
+    removedItems | join
 
-`\nCopy an Array`
-fruits.slice() | join
-{% raw %}```{% endraw %}
-```
+    `\nCopy an Array`
+    fruits.slice() | join
+    ```
 
 Which can be run with `web run <script>.ss` to view its expected output:
 
@@ -2580,14 +2578,12 @@ a + b = @(a + b)
 
 The equivalent in `#Script` using code blocks:
 
-```hbs
-{% raw %}```code{% endraw %}
-1 | to => a
-2 | to => b
-{% raw %}```{% endraw %}
-Basic Calc
-a + b = {% raw %}{{a + b}}{% endraw %}
-```
+    ```code
+    1 | to => a
+    2 | to => b
+    ```
+    Basic Calc
+    a + b = {% raw %}{{a + b}}{% endraw %}
 
 The entire **code** feature is implemented within a
 [simple TransformCodeBlocks PreProcessor](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/Script/ScriptPreprocessors.cs) 
@@ -2609,44 +2605,43 @@ structured and indented for readability aren't reflected in its text output.
 
 We can see an example of how `code` blocks work from the example below:
 
-```hbs
-{% raw %}<!--
-title: The title
--->
+    {% raw %}<!--
+    title: The title
+    -->
 
-# {{title}}
+    # {{title}}
 
-{{ 1 + 1 }}{% endraw %}
+    {{ 1 + 1 }}{% endraw %}
 
-{% raw %}```code{% endraw %}
-* Odd numbers < 5 *
-#each i in range(1,5)
+    ```code
+    * Odd numbers < 5 *
+    #each i in range(1,5)
 
-    #if i.isOdd()
-        `${i} is odd`
-    else
-        `${i} is even`
-    /if
+        #if i.isOdd()
+            `${i} is odd`
+        else
+            `${i} is even`
+        /if
 
-/each
-{% raw %}```{% endraw %}
+    /each
+    ```
 
-{% raw %}```code{% endraw %}
-1 + 2 * 3
-{% raw %}```{% endraw %}
+    ```code
+    1 + 2 * 3
+    ```
 
-{% raw %}```code{% endraw %}
-{% raw %}    {{ 1 + 1 }}
+    ```code
+    {% raw %}    {{ 1 + 1 }}
 
-    {{#if debug}}
-        {{ range(1,5) 
-           | where => it.isOdd() 
-           | map => it * it   
-           | join(',')
-        }}
-    {{/if}}{% endraw %}
-{% raw %}```{% endraw %}
-```
+        {{#if debug}}
+            {{ range(1,5) 
+            | where => it.isOdd() 
+            | map => it * it   
+            | join(',')
+            }}
+        {{/if}}
+    ```
+    {% endraw %}
 
 Before this script is run it's processed by the 
 [TransformCodeBlocks PreProcessor](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/Script/ScriptPreprocessors.cs)
@@ -2758,37 +2753,37 @@ automatically updated at each `Ctrl+S` save point where we're able to easily inf
 Here's another example showing the expressive power of `#Script` and its [comprehensive high-level library](https://sharpscript.net/docs/scripts-reference)
 which is used to update all library dependencies of the [Vue and React "lite" Project Templates](/templates-lite):
 
-```js
-{% raw %}```code{% endraw %}
-* Update /libraries gists           *
-* Usage: web run libraries.ss <id>? *
+    {% raw %}
+    ```code
+    * Update /libraries gists           *
+    * Usage: web run libraries.ss <id>? *
 
-{% raw %}{{
-    {
-        'react-lite-lib': 'ad42adc11337c243ee203f9e9f84622c',
-        'vue-lite-lib':   '717258cd4c26ba612e5eed0615d8d61c',
-    }
-    | to => gistMap
-}}{% endraw %}
+    {{
+        {
+            'react-lite-lib': 'ad42adc11337c243ee203f9e9f84622c',
+            'vue-lite-lib':   '717258cd4c26ba612e5eed0615d8d61c',
+        }
+        | to => gistMap
+    }}
 
-(ARGV.Length > 0 ? ARGV : gistMap.Keys) | to => keys
+    (ARGV.Length > 0 ? ARGV : gistMap.Keys) | to => keys
 
-#each id in keys
-    gistMap[id] | to => gistId
+    #each id in keys
+        gistMap[id] | to => gistId
 
-    {} | to => files
+        {} | to => files
 
-    vfsFileSystem(`libraries/${id}`) | to => fs
-    #each file in fs.allFiles()
-        files.putItem(file.VirtualPath.replace('/','\\'), file.fileContents()) | end
+        vfsFileSystem(`libraries/${id}`) | to => fs
+        #each file in fs.allFiles()
+            files.putItem(file.VirtualPath.replace('/','\\'), file.fileContents()) | end
+        /each
+
+        `Writing to ${files.count()} files to ${id} '${gistId}' ...` | raw
+        vfsGist(gistId, 'GITHUB_GIST_TOKEN'.envVariable()) | to => gist
+        gist.writeFiles(files)
     /each
-
-    `Writing to ${files.count()} files to ${id} '${gistId}' ...` | raw
-    vfsGist(gistId, 'GITHUB_GIST_TOKEN'.envVariable()) | to => gist
-    gist.writeFiles(files)
-/each
-{% raw %}```{% endraw %}
-```
+    ```
+    {% endraw %}
 
 Running without any arguments:
 
