--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -1524,6 +1524,8 @@ to handle when users don't have access to a protected route.
 
 Side-by-side comparison displaying the names for the different Component Type in each JS Framework:
 
+<div class='markdown-body pb-3'>
+{% capture table %}
 | Control        | vue | react | angular |
 | - | - | - | - |
 | Forbidden      | Forbidden        | Forbidden      | ForbiddenComponent |
@@ -1540,6 +1542,9 @@ Side-by-side comparison displaying the names for the different Component Type in
 | NavLink        | nav-link         | NavLink        | nav-link           |
 | NavButtonGroup | nav-button-group | NavButtonGroup | nav-button-group   |
 | NavLinkButton  | nav-link-button  | NavLinkButton  | nav-link-button    |
+{% endcapture %}
+{{ table | markdownify }}
+</div>
 
 ### Bootstrap UI Form Controls
 
@@ -2518,6 +2523,9 @@ fs.allFiles()
 
 Which is now supported on all VFS APIs on the left with its C# implementation where `vfs` is an instance of `IVirtualPathProvider`:
 
+{% endcapture %}
+{{ table | markdownify }}
+</div>
 | Protected VFS Script Method | C# Implementation |
 | - | - | 
 | allFiles()                                 | vfs.GetAllFiles() |
@@ -2542,6 +2550,9 @@ Which is now supported on all VFS APIs on the left with its C# implementation wh
 | fileTextContents(virtualPath)              | vfs.GetFile(virtualPath)?.ReadAllText() |
 | fileBytesContent(virtualPath)              | vfs.GetFile(virtualPath)?.ReadAllBytes() |
 | fileHash(virtualPath)                      | vfs.GetFileHash(virtualPath) |
+{% endcapture %}
+{{ table | markdownify }}
+</div>
 
 All above VFS APIs work against the built-in VFS providers below:
 
@@ -2882,6 +2893,8 @@ gateway.githubGist(gistId) | to => gist
 
 Which renders the following GitHub Flavored Markdown output:
 
+<div class='markdown-body pb-3'>
+{% capture table %}
 | gist                                                                                 ||
 |--------------|------------------------------------------------------------------------|
 | Node Id      | MDQ6R2lzdDRjNWQ5NWVjNGIyNTk0YjRjZGQyMzg5ODdmZTdhMTVh                   |
@@ -2924,6 +2937,9 @@ Which renders the following GitHub Flavored Markdown output:
 | Size      | 46                     |
 | Truncated | False                  |
 | Content   | Run `ruby hello_world.rb` to print Hello World |
+{% endcapture %}
+{{ table | markdownify }}
+</div>
 
 ## Gist VFS Provider
 
