--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -2523,9 +2523,8 @@ fs.allFiles()
 
 Which is now supported on all VFS APIs on the left with its C# implementation where `vfs` is an instance of `IVirtualPathProvider`:
 
-{% endcapture %}
-{{ table | markdownify }}
-</div>
+<div class='markdown-body pb-3'>
+{% capture table %}
 | Protected VFS Script Method | C# Implementation |
 | - | - | 
 | allFiles()                                 | vfs.GetAllFiles() |
