--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -567,8 +567,8 @@ Then choosing which features you want to add to your project with `mix <name>`, 
 
     $ mix redis
 
-The entire list of available features is maintained in the self-documenting 
-[mix.md](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8) feature index, which is both human and machine readable.
+The entire list of available features is maintained in the self-documenting human and machine readable
+[mix.md](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8) feature index.
 
 > To publish your feature here and make it available to all `mix` users, please [link to it in the comments](https://gist.github.com/gistlyn/9b32b03f207a191099137429051ebde8#comments).
 
